// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SInput.vue can be invalid 1`] = `
<slabel-stub label="input" isrequired="true" for="input">
  <div class="input__container"><input id="input" name="input" placeholder="" required="required" type="text" class="input input--invalid">
    <!---->
    <!---->
  </div>
</slabel-stub>
`;

exports[`SInput.vue can be required 1`] = `
<slabel-stub label="input" isrequired="true" for="input">
  <div class="input__container"><input id="input" name="input" placeholder="" required="required" type="text" class="input">
    <!---->
    <!---->
  </div>
</slabel-stub>
`;

exports[`SInput.vue can have a placeholder 1`] = `
<slabel-stub label="input" isrequired="true" for="input">
  <div class="input__container"><input id="input" name="input" placeholder="some placeholder" required="required" type="text" class="input">
    <!---->
    <!---->
  </div>
</slabel-stub>
`;

exports[`SInput.vue can have an icon on the left 1`] = `
<slabel-stub label="input" isrequired="true" for="input">
  <div class="input__container"><input id="input" name="input" placeholder="" required="required" type="text" class="input input--has-icon-left">
    <sicon-stub icon="activity" color="" size="" icon-color="green" class="input__icon input__icon--left"></sicon-stub>
    <!---->
  </div>
</slabel-stub>
`;

exports[`SInput.vue can have an icon on the right 1`] = `
<slabel-stub label="input" isrequired="true" for="input">
  <div class="input__container"><input id="input" name="input" placeholder="" required="required" type="text" class="input input--has-icon-right">
    <!---->
    <sicon-stub icon="activity" color="" size="" icon-color="green" class="input__icon input__icon--right"></sicon-stub>
  </div>
</slabel-stub>
`;

exports[`SInput.vue can hide the optional tag 1`] = `
<slabel-stub label="input" for="input" hideoptional="true">
  <div class="input__container"><input id="input" name="input" placeholder="" type="text" class="input">
    <!---->
    <!---->
  </div>
</slabel-stub>
`;

exports[`SInput.vue can set each icon color 1`] = `
<slabel-stub label="input" isrequired="true" for="input">
  <div class="input__container"><input id="input" name="input" placeholder="" required="required" type="text" class="input">
    <!---->
    <!---->
  </div>
</slabel-stub>
`;

exports[`SInput.vue renders correctly 1`] = `
<slabel-stub label="input" isrequired="true" for="input">
  <div class="input__container"><input id="input" name="input" placeholder="" required="required" type="text" class="input">
    <!---->
    <!---->
  </div>
</slabel-stub>
`;
